[project]
name = "default"
version = "0.1.0"
description = "This repository contains configurations to set up a Python development environment using VSCode's Dev Container feature. The environment includes uv and Ruff."

requires-python = ">=3.9"
readme = "README.md"
license = { file = "LICENSE" }

dependencies = ["pydantic>=2.10.6", "pytz>=2024.2"]

[tool.pytest.ini_options]
pythonpath = "src"

[tool.uv]
dev-dependencies = ["pyright>=1.1.389", "pytest>=8.3.3", "ruff>=0.8.0"]
